--- a/src/app/pages/board-viewer/board-viewer.component.html
+++ b/src/app/pages/board-viewer/board-viewer.component.html
@@ -5,7 +5,7 @@
         <div class="ti"> Tableau id:</div>
       </div>
       <div class="card-body">
-        <app-board [collection]="boardService.getPicoCollection()"></app-board>
+        <app-board [pictoCollection]="boardService.getPicoCollection()" ></app-board>
       </div>
       <div class="card-footer text-right">
             <button class="btn btn-primary" type="submit">Sauver le tableau</button>
