--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,5 +1,5 @@
 <div class="square border rounded-lg border-primary bg-light">
   <div class="square-center">
-    <img src="{{pictoCard.pictureUrl}}" alt="" class="img-fluid">
+    <img src="{{pictoCard?.pictureUrl}}" alt="" class="img-fluid">
   </div>
 </div>
