--- a/src/app/pages/board-maker/board-maker.component.html
+++ b/src/app/pages/board-maker/board-maker.component.html
@@ -10,4 +10,11 @@
   <div class="text-right">
     <button class="btn btn-primary" (click)="generateCollection()">Créer Tableau</button>
   </div>
+  <div class="text-right mt-1">
+    <input
+      style="display: none"
+      type="file" (change)="uploadCollection($event)"
+      #fileInput>
+    <button class="btn btn-primary" (click)="fileInput.click()" >Charger un fichier</button>
+  </div>
 </form>
